# arkcompiler_ets_frontend

./: .gitignore  :wq：wq  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  codecheck_ignore.json  ets_frontend_config.gni  ohos.build  run_all_tests.py  run_test.py  tsstt.py
arkfuzzer/: BUILD.gn  config.py  gen_abc.py  main.cpp  run_test_fuzzy.py
arkfuzzer/cov/: cov.cpp  cov.h
fuzzilli/: BUILD.gn  README.md  README_zh.md  config.py  cov.cc  cov.h  gen_abc.py  main.cpp  run_fuzzy.py
fuzzilli/coverage/: coverage.cpp  coverage.h
fuzzilli/patchs/: build_gn.patch  fuzzilli.patch
panda_guard/: BUILD.gn  guard4program.cpp  guard4program.h  guard_driver.cpp  guard_driver.h  guard_main.cpp
panda_guard/configs/: guard_args_parser.cpp  guard_args_parser.h  guard_context.cpp  guard_context.h  guard_graph_context.cpp  guard_graph_context.h  guard_name_cache.cpp  guard_name_cache.h  guard_options.cpp  guard_options.h
panda_guard/generator/: name_generator.h  name_mapping.cpp  name_mapping.h  order_name_generator.cpp  order_name_generator.h
panda_guard/obfuscate/: class.cpp  class.h  entity.cpp  entity.h  file_path.cpp  file_path.h  function.cpp  function.h  graph_analyzer.cpp  graph_analyzer.h  inst_obf.cpp  inst_obf.h  method.cpp  method.h  module_record.cpp  module_record.h  node.cpp  node.h  object.cpp  object.h  program.cpp  program.h  property.cpp  property.h
panda_guard/script/: generate_project_bytecode.py
panda_guard/tests/: BUILD.gn
panda_guard/tests/grammar/: grammar_test.cpp
panda_guard/tests/grammar/advanced_type/: config.cache.json  config.pa  discriminated_unions.ts  intersection_types.ts  predefined_types.ts  union_types.ts
panda_guard/tests/grammar/array_validation/: array_at.ts  array_copywithin.ts  array_entries.ts  array_every.ts  array_expanding.ts  array_fill.ts  array_flat.ts  array_forEach.ts  array_includes.ts  array_index.ts  array_is.ts  array_join.ts  array_keys.ts  array_lastindex.ts  array_length.ts  array_map.ts  array_pop.ts  array_push.ts  array_reduce.ts  array_reverse.ts  array_shift.ts  array_slice.ts  array_some.ts  array_sort.ts  array_toLocaleString.ts  array_toString.ts  array_unshift.ts  array_values.ts  config.cache.json  config.json  config.pa  readonly_array.ts
panda_guard/tests/grammar/circulations/: config.cache.json  config.json  config.pa  for_in.ts  for_of.ts
panda_guard/tests/grammar/class_validation/: class_abstract.ts  class_accessor.ts  class_compatible.ts  class_declare.ts  class_demo_1.ts  class_demo_2.ts  class_demo_3.ts  class_demo_3_use.ts  class_demo_4.ts  class_demo_4_use.ts  class_demo_5.ts  class_demo_5_use.ts  class_in_namespace.ts  class_inherit.ts  class_interface.ts  class_protected.ts  class_public.ts  class_readonly.ts  class_static.ts  config.cache.json  config.json  config.pa
panda_guard/tests/grammar/console/: blockTest.ts  clauseTest.ts  config.cache.json  config.json  config.pa  consoleTest.ts  moduleBlockTest.ts  multiConsole.ts  sourceFileTest.ts
panda_guard/tests/grammar/constructor_property_export/: config.cache.json  config.json  config.pa  constructor_property.ts
panda_guard/tests/grammar/constructor_property_property/: config.cache.json  config.json  config.pa  constructor_property.ts  constructor_var_property.ts  constructor_variables.ts
panda_guard/tests/grammar/constructor_property_toplevel/: config.cache.json  config.pa  constructor_property.ts
panda_guard/tests/grammar/control_statement/: condition_type.ts  config.cache.json  config.pa  if_validation.ts
panda_guard/tests/grammar/data_type/: config.cache.json  config.json  config.pa  json_validation.ts  number_validation.ts  type_conversion.ts  type_exclude.ts  type_omit.ts  type_pick.ts
panda_guard/tests/grammar/date_validation/: config.cache.json  config.json  config.pa  date_tojson.ts
panda_guard/tests/grammar/declare_global/: config.cache.json  config.json  config.pa  global.ts
panda_guard/tests/grammar/double_underscore_constructor_default/: config.cache.json  config.json  config.pa  constructorTest1.ts
panda_guard/tests/grammar/double_underscore_constructor_property/: config.json  (+3 more)
panda_guard/tests/moduletest/: hello_world_test.cpp  keep_test.cpp  name_cache_test.cpp  project_class_constructor_test.cpp  project_class_test.cpp  project_enum_test.cpp  project_function_test.cpp  project_graph_test.cpp  project_guard_test.cpp  project_guard_test.h  project_object_interface_test.cpp  project_object_property_test.cpp  project_remove_log_test.cpp
panda_guard/tests/unittest/: guard_args_parser_test.cpp  guard_context_test.cpp  guard_driver_test.cpp  guard_name_cache_test.cpp  guard_options_test.cpp  name_generator_test.cpp
panda_guard/tests/util/: test_util.cpp  test_util.h
panda_guard/util/: assert_util.h  file_util.cpp  file_util.h  json_util.cpp  json_util.h  string_util.cpp  string_util.h
test/scripts/test_for_arkts/: .gitignore  README.md  config.json  pyproject.toml  run_test.py
ts2panda/tests/: BUILD.gn  builtIns.test.ts  commonjs.test.ts  esmodule.test.ts  hoist.test.ts  lexenv.test.ts  pandagen.test.ts  regAllocator.test.ts
ts2panda/tests/expression/: arguments.test.ts  binary.test.ts  call.test.ts  cmpBinary.test.ts  commalist.test.ts  conditions.test.ts  delete.test.ts  elementAccess.test.ts  functionExpression.test.ts  literal.test.ts  new.test.ts  numericLiteral.test.ts  operationEqual.test.ts  parenthesized.test.ts  postfixOperations.test.ts  prefixOperations.test.ts  propertyAccess.test.ts  templateExpression.test.ts  thisKeyWord.test.ts  typeOf.test.ts  void.test.ts
ts2panda/tests/statements/: doWhile.test.ts  for.test.ts  forIn.test.ts  forOf.test.ts  functionDeclaration.test.ts  switch.test.ts  tryCatch.test.ts  variableDeclaration.test.ts  while.test.ts
ts2panda/tests/strictmode/: strictmode.test.ts
ts2panda/tests/types/: typeUtils.ts
ts2panda/tests/utils/: base.ts  example_asthelper.ts
ts2panda/tests/watch_expression/: addWatch.test.ts
ts2panda/ts2abc/: BUILD.gn  main.cpp  ts2abc.cpp  ts2abc.h  ts2abc_options.h  type_adapter.cpp
ts2panda/ts2abc/tests/: BUILD.gn
(+9535 files in other folders)
