# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//arkcompiler/ets_frontend/es2panda/es2abc_config.gni")
import("//arkcompiler/ets_frontend/ets_frontend_config.gni")
import("//arkcompiler/runtime_core/ark_config.gni")

ohos_executable("arkfuzzer") {
  use_exceptions = true

  sources = [
    "coverage/coverage.cpp",
    "main.cpp",
  ]

  include_dirs = [ "./coverage" ]

  cflags = []
  cflags += [ "-fsanitize-coverage=trace-pc-guard" ]

  ldflags = []
  ldflags += [ "-Wl,-Bstatic" ]
  ldflags += [ "-lstdc++" ]
  ldflags += [ "-Wl,-Bdynamic" ]

  install_enable = false

  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
}

group("arkfuzzer_build") {
  if (host_os == "linux") {
    deps = [ ":arkfuzzer(${toolchain_linux})" ]
  }

  if (host_os == "mac") {
    deps = [ ":arkfuzzer(${toolchain_mac})" ]
  }
}
