[project]
name = "test_for_arkts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "liushitong", email = "liushitong@huawei.com"},
]
dependencies = [
    "pytz>=2024.1",
    "jinja2>=3.1.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "python run_test.py"
